# docintel-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260611_0001_initial_schema.py  20260611_0002_jobs_types_exports.py  20260611_0003_ocr_normalization_confidence.py
app/: main.py
app/api/v1/: documents.py
app/core/: config.py  errors.py  logging.py  middleware.py  rate_limit.py
app/db/: base.py
app/models/: document.py  enums.py  extraction.py  job.py
app/schemas/: document.py
app/services/: exports.py  extraction.py  normalization.py  ocr.py  pdf.py  storage.py
app/tasks/: celery_app.py  documents.py  exports.py
docs/: api-examples.md
scripts/: seed_demo.py
tests/: conftest.py  test_documents.py  test_hardening.py  test_health.py  test_pdf.py  test_seed_demo.py
