[project]
name = "docintel-api"
version = "0.1.0"
description = "Document intelligence and automation API for structured extraction, validation, and exports."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "celery>=5.4.0",
    "fastapi>=0.112.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

